<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="1"
        android:columnCount="3"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@color/colorMenu">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_row="0"
            android:layout_column="0"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/img_text"
            android:id="@+id/textButton"
            android:scaleType="fitCenter"
            android:contentDescription="@string/desc_text_buttom"
            />


        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_row="0"
            android:layout_column="1"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/img_home"
            android:id="@+id/homeButton"
            android:scaleType="fitCenter"
            android:contentDescription="@string/desc_home_buttom"
            />


        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_row="0"
            android:layout_column="2"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/img_image"
            android:id="@+id/imageButton"
            android:scaleType="fitCenter"
            android:contentDescription="@string/desc_img_buttom"
            />

    </GridLayout>

</LinearLayout>